--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<p>On third day of the tenth month of the nineteenth year after two millenium this github page was created on an iPad.</p>
+<p>On the third day of the tenth month of the nineteenth year after two millenium since the supposed birth of christ, 
+  this github page was created on an iPad.</p>
 </body>
 </html>
