--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 <p>I'm hosted with GitHub Pages.</p>
 <p>On the third day of the tenth month of the nineteenth year after two millenium since the supposed birth of christ, 
   this github page was created on an iPad.</p>
+  
+<h2>Logitexh Bluetooth Keyboard - K480</h2>
+  <p>The keys are not of the best quality. Some keys are mushy and pressing them slightly off-center is not the best experience.</p>
 </body>
 </html>
