--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   
 <h2>Logitech Bluetooth Keyboard - K480</h2>
   <p>The keys are not of the best quality. Some keys are mushy and pressing them slightly off-center is not the best experience.</p>
-<p>Well well well, now I can actually touch type!
+<p>Well well well, now I can actually touch type! 27Feb2021
 </body>
 </html>
